--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ div .status-section{
 }
 
 .right-wing{
-    padding: 20px 0 20px 40px;
+    padding: 20px 10px 20px 40px;
     font-weight: 500;
     position: fixed;
     right: 0;
